--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     password: rootpassword
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show_sql: false
     open-in-view: false
 
