--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,4 +9,13 @@ spring:
       ddl-auto: none
     show_sql: false
     open-in-view: false
-
+springdoc:
+  api-docs:
+    path: /v3/api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+    display-request-duration: true
+    operationsSorter: alpha
+    tryItOutEnabled: true
+    tagsSorter: alpha
+    doc-expansion: none
